# Figuratics

./: 24_bit_bmp.cpp  README.md
Figuratics/: CMakeLists.txt  figuretype.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myresource.qrc  mytextclass.cpp  mytextclass.h
NewPaint2 2/: CMakeLists.txt  figuretype.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myresource.qrc  myscene.cpp  myscene.h  mytextclass.cpp  mytextclass.h
Releases/0.0.1/Figuratics.app/Contents/: Info.plist
Releases/0.0.1/Figuratics.app/Contents/MacOS/: Figuratics
Releases/0.0.1/NewPaint2.app/Contents/: Info.plist
Releases/0.0.1/NewPaint2.app/Contents/MacOS/: NewPaint2
Releases/0.0.1/NewPaint2.app/Contents/Resources/: iconfile.icns
